making changes to work with github pages

--- a/about-me.html
+++ b/about-me.html
@@ -18,10 +18,10 @@
         
             <nav class="navigation">
                 <ul>
-                    <li><a href="/index.html">Home</a> </li>
-                    <li><a href="/about-me.html">About Me</a></li>
-                    <li><a href="/skills.html">Skills</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="/jonbbagby/index.html">Home</a> </li>
+                    <li><a href="/jonbbagby/about-me.html">About Me</a></li>
+                    <li><a href="/jonbbagby/skills.html">Skills</a></li>
+                    <li><a href="/jonbbagby/projects.html">Projects</a></li>
                 </ul>
             </nav>
         </div>
@@ -44,7 +44,7 @@
         <div class="col">
             <section>
                 <h3>University</h3>
-                <img class="icon"src="/images/siue-logo.jpg" alt="siue class of 2006">
+                <img class="icon"src="/jonbbagby/images/siue-logo.jpg" alt="siue class of 2006">
                 <h4>Southern Illinois University: Edwardsville</h4>
                 <ul>
                     
@@ -61,7 +61,7 @@
         <div class="col">
             <section>
                 <h3>Technical</h3>
-                <img class="icon" src="/images/launchcode-logo2.jpeg" alt="">
+                <img class="icon" src="/jonbbagby/images/launchcode-logo2.jpeg" alt="">
                 <h4>Launchcode</h4>
                 <ul>
                     <li>JavaScript Web Development</li>
