--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 <div>
                     <nav class="navigation">
                         <ul>
-                            <li><a href="/index.html">Home</a> </li>
-                            <li><a href="/about-me.html">About Me</a></li>
-                            <li><a href="/skills.html">Skills</a></li>
-                            <li><a href="/projects.html">Projects</a></li>
+                            <li><a href="/jonbbagby/index.html">Home</a> </li>
+                            <li><a href="/jonbbagby/about-me.html">About Me</a></li>
+                            <li><a href="/jonbbagby/skills.html">Skills</a></li>
+                            <li><a href="/jonbbagby/projects.html">Projects</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -39,7 +39,7 @@
 
     <div class="main">  
         <div class="container" id="main-image">
-            <img id="headshot" src="/images/image1.jpg" alt="Jon Bagby and wife">
+            <img id="headshot" src="/jonbbagby/images/image1.jpg" alt="Jon Bagby and wife">
         </div> 
 
         <div id="main-info">
