--- a/projects.html
+++ b/projects.html
@@ -19,10 +19,10 @@
     
         <nav class="navigation">
             <ul>
-                <li><a href="/index.html">Home</a> </li>
-                <li><a href="/about-me.html">About Me</a></li>
-                <li><a href="/skills.html">Skills</a></li>
-                <li><a href="/projects.html">Projects</a></li>
+                <li><a href="/jonbbagby/index.html">Home</a> </li>
+                <li><a href="/jonbbagby/about-me.html">About Me</a></li>
+                <li><a href="/jonbbagby/skills.html">Skills</a></li>
+                <li><a href="/jonbbagby/projects.html">Projects</a></li>
             </ul>
         </nav>
     </div>
