--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <table>
                 <tr><td>Phone: </td> <td><a href="tel:16187921750">Leave me a voicemail</a> </td></tr>
                 <tr><td>Email: </td> <td><a href="mailto:bobagby78@gmail.com" target="new">bobagby78@gmail.com</a> </td></tr>
-                <tr><td>Github: </td> <td> <a href="http://github.com/bobagby78" target="new">bobagby78</a></td></td>
+                <tr><td>Github: </td> <td> <a href="http://github.com/bobagby78" target="new">bobagby78</a></td></tr>
                 <tr><td>Linkedin: </td> <td> <a href="https://www.linkedin.com/in/jon-bagby-6766529b/" target="new">jon-bagby</a> </td></tr>
             </table>
             <p id="intent-statement">Hey, I'm Jon. I've been working as a teacher for 13 years, 
