adds information and structure to the projects page. minor tweaks to the header on all pages. changes the color scheme and layout on all views.

--- a/about-me.html
+++ b/about-me.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>JBB Info</title>
 </head>
-<body>
+<body id="grad">
 
     <header id="header">
         <div class="container">
