--- a/projects.html
+++ b/projects.html
@@ -10,13 +10,16 @@
     <title>JBB Projects</title>
 </head>
 
+
+<body id="grad">
+
 <header id="header">
     <div class="container">
         <div id="name-plate">
             <h1>Jon B Bagby</h1>
-            <h2>Full Stack Web Developer</h3> 
+            <h2>Full Stack Web Developer</h2>
         </div>
-    
+
         <nav class="navigation">
             <ul>
                 <li><a href="/jonbbagby/index.html">Home</a> </li>
@@ -27,8 +30,68 @@
         </nav>
     </div>
 </header>
+<h1>My Projects</h1>
+<table>
 
-<body>
-    Pojects
+    <tr>
+        <th class="viz-table">
+            <h3>What's Sup?</h3>
+        </th>
+        <th class="viz-table">
+            <h3>The Dungeon</h3>
+        </th>
+    </tr>
+    <tr>
+        <td class="viz-table">
+        <p>What's Sup was a group capstone project I completed with three other people during the optional Liftoff
+            extension to the LaunchCode Web development training I attended in 2020. The main features of the app were
+            the "My Kitchen" view, where users could keep track of the proteins, spices, condiments and sides in their
+            pantry via form submission. Users can also upload recipes to the database to choose from on the "Recipes"
+            view. Once the database is loaded with pantry items and recipes, users can then use the "Match Recipes"
+            feature which shows a list of recipes the user can cook based on their pantry items and the recipes in the
+            database. Users would be able to choose from their own recipes to match, or other user's recipes.
+        </p>
+        </td>
+        <td class="viz-table">
+            <p>The Dungeon is the first project I started out of LaunchCode. It has always been a work in progress and
+                is a playground I use to learn and try out new skills on the front end and back end of web Development.
+
+            </p>
+        </td>
+    </tr>
+
+</table>
+<table class=" project-table">
+
+    <tr>
+        <th class="viz-table">
+            <h3>Critical Roll Tabletop Dice Roller</h3>
+        </th>
+        <th class="viz-table">
+            <h3>My Garage</h3>
+        </th>
+    </tr>
+
+    <tr>
+        <td class="viz-table">
+            <p>Critical Roll is an Android dice roller app that I developed on Android Studio. This is the first project
+                I have developed using Android Studio, so it is a little rough around the edges.
+            </p>
+        </td>
+
+        <td class="viz-table">
+            <p> My Garage is my next project on the horizon. It will be a java-based web app (and will most likely have
+                a Kotlin Android counterpart) designed for the home mechanic. It will have a garage portal where users can
+                import their vehicles that they own and work on to save to the database. It will have a service portal
+                where users can keep track of regular maintenance performed on each of the vehicles in their garage.
+                I would also like to play around with a social aspect where users can reach out to others on the app
+                and ask questions, share photos, etc.
+
+            </p>
+        </td>
+
+    </tr>
+
+</table>
 </body>
 </html>
