--- a/skills.html
+++ b/skills.html
@@ -8,7 +8,7 @@
 
     <title>JBB Skills</title>
 </head>
-<body>
+<body id="grad">
 <header id="header">
     <div class="container">
         <div id="name-plate">
