adds screenshots for critical roll project. updates projects.html to link to criticalRoll.html updates to styling

--- a/projects.html
+++ b/projects.html
@@ -77,6 +77,7 @@
             <p>Critical Roll is an Android dice roller app that I developed on Android Studio. This is the first project
                 I have developed using Android Studio, so it is a little rough around the edges.
             </p>
+            <a href="/jonbbagby/criticalRoll.html"><p>click here to see screenshots</p></a>
         </td>
 
         <td class="viz-table">
