changes formatting to get better spacing and margins on skills.html and about-me.html fixes image src url in criticalRoll.html

--- a/skills.html
+++ b/skills.html
@@ -29,106 +29,81 @@
 
 <div class="row container">
 
-    <div class="col">
+    <div class="col skills-column">
         <section class="center-section">
             <h3>Front End Skills</h3>
             <img class="small-icon" src="/jonbbagby/images/html.png" alt="html icon">
             <h4>HTML 5</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
+
 
             <img class="small-icon" src="/jonbbagby/images/css.png" alt="css icon">
             <h4>CSS 3</h4>
-            <ul>Experience level:
-                <li class="plain">Somewhat Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
+
 
             <img class="small-icon" src="/jonbbagby/images/javascriptTrans.png" alt="Javascript icon">
             <h4>Javascript</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
+
 
             <img class="small-icon" src="/jonbbagby/images/typescript.png" alt="Typescript icon">
             <h4>Typescript</h4>
-            <ul>Experience level:
-                <li class="plain">Exposed</li>
-            </ul>
+            <p>Experience level: Exposed</p>
 
             <img class="small-icon" src="/jonbbagby/images/angular.png" alt="Angular icon">
             <h4>Angular</h4>
-            <ul>Experience level:
-                <li class="plain">Exposed</li>
-            </ul>
+            <p>Experience level: Exposed</p>
         </section>
         
     </div>
-    <div class="col">
+    <div class="col skills-column">
         <section class="center-section">
             <h3>Back End Skills</h3>
 
             <img class="small-icon" src="/jonbbagby/images/javaTrans.png" alt="Java icon">
             <h4>Java</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced </p>
 
             <img class="small-icon" src="/jonbbagby/images/spring.png" alt="Spring-boot icon">
             <h4>Spring-boot</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
 
             <img class="small-icon" src="/jonbbagby/images/thymeleaf.png" alt="thymeleaf icon">
             <h4>Thymeleaf</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
 
 
             <img class="small-icon" src="/jonbbagby/images/kotlin.png" alt="Kotlin icon">
             <h4>Kotlin</h4>
-            <ul>Experience level:
-                <li class="plain">Exposed</li>
-            </ul>
+            <p>Experience level: Exposed</p>
 
             <img class="small-icon" src="/jonbbagby/images/swift.png" alt="Swift icon">
             <h4>Swift</h4>
-            <ul>Experience level:
-                <li class="plain">Exposed</li>
-            </ul>
+            <p>Experience level: Exposed</p>
 
         </section>
     </div>
 
-    <div class="col">
+    <div class="col skills-column">
         <section class="center-section">
             <h3>Other</h3>
 
             <img class="small-icon" src="/jonbbagby/images/github.png" alt="Github icon">
             <h4>Github</h4>
-            <ul>Experience level
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experience</p>
 
             <img class="small-icon" src="/jonbbagby/images/mysql.png" alt="MySQL icon">
             <h4>MySQL</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
 
             <img class="small-icon" src="/jonbbagby/images/intellij.png" alt="IntelliJ Idea icon">
             <h4>IntelliJ Idea</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
 
             <img class="small-icon" src="/jonbbagby/images/androidStudio.png" alt="Android Studio icon">
             <h4>Android Studio</h4>
-            <ul>Experience level:
-                <li class="plain">Experienced</li>
-            </ul>
+            <p>Experience level: Experienced</p>
 
 
 
@@ -136,8 +111,8 @@
     </div>
 </div>
 
-<aside style="float: right">
-    Hello
-</aside>
+<!--<aside style="float: right">-->
+<!--    Hello-->
+<!--</aside>-->
 </body>
 </html>
