adds samples of projects. updates positioning and size of images, hover to expand

--- a/projects.html
+++ b/projects.html
@@ -43,20 +43,24 @@
     </tr>
     <tr>
         <td class="viz-table">
-        <p>What's Sup was a group capstone project I completed with three other people during the optional Liftoff
-            extension to the LaunchCode Web development training I attended in 2020. The main features of the app were
-            the "My Kitchen" view, where users could keep track of the proteins, spices, condiments and sides in their
-            pantry via form submission. Users can also upload recipes to the database to choose from on the "Recipes"
-            view. Once the database is loaded with pantry items and recipes, users can then use the "Match Recipes"
-            feature which shows a list of recipes the user can cook based on their pantry items and the recipes in the
-            database. Users would be able to choose from their own recipes to match, or other user's recipes.
-        </p>
+            <p>What's Sup was a group capstone project I completed with three other people during the optional Liftoff
+                extension to the LaunchCode Web development training I attended in 2020. The main features of the app were
+                the "My Kitchen" view, where users could keep track of the proteins, spices, condiments and sides in their
+                pantry via form submission. Users can also upload recipes to the database to choose from on the "Recipes"
+                view. Once the database is loaded with pantry items and recipes, users can then use the "Match Recipes"
+                feature which shows a list of recipes the user can cook based on their pantry items and the recipes in the
+                database. Users would be able to choose from their own recipes to match, or other user's recipes.
+            </p>
+                <a href="/jonbbagby/whatsSup.html"><p>Click here to see screenshots</p></a>
         </td>
         <td class="viz-table">
             <p>The Dungeon is the first project I started out of LaunchCode. It has always been a work in progress and
                 is a playground I use to learn and try out new skills on the front end and back end of web Development.
-
+                The Dungeon uses Spring Boot, Thymeleaf, and Java to move information between the back and front ends.
+                It stores information entered by users in a MySQL database. The end goal of the Character Builder is to
+                be able to create a printable D&D character sheet and store that character in a database.
             </p>
+            <a href="/jonbbagby/theDungeon.html"><p>Click here to see screenshots</p></a>
         </td>
     </tr>
 
@@ -75,7 +79,9 @@
     <tr>
         <td class="viz-table">
             <p>Critical Roll is an Android dice roller app that I developed on Android Studio. This is the first project
-                I have developed using Android Studio, so it is a little rough around the edges.
+                I have developed using Android Studio, so it is a little rough around the edges. I learned Kotlin in the
+                process of developing the app, and it has been a valuable resource in learning about XML and working with
+                the Android Studio design interface.
             </p>
             <a href="/jonbbagby/criticalRoll.html"><p>click here to see screenshots</p></a>
         </td>
