--- a/criticalRoll.html
+++ b/criticalRoll.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="grad">
+<a href="/jonbbagby/projects.html">
+    <button id="back-button" >Back</button>
+</a>
 <div class="centered">
 
     <table>
         <tr>
-            <th>Sample 4d6 roll</th>
-            <th>Sample Coin Flip</th>
-            <th>Sample Ability Scores Roll</th>
+            <th><h2>Sample 4d6 roll</h2></th>
+            <th><h2>Sample Coin Flip</h2></th>
+            <th><h2>Sample Ability Scores Roll</h2></th>
         </tr>
         <tr>
             <td>
@@ -29,8 +32,9 @@
 
     </table>
 
-
 </div>
+
+
 
 </body>
 </html>
