fixes picture formatting, placement, and hover. adds more images to theDungeon.html

--- a/projects.html
+++ b/projects.html
@@ -23,14 +23,14 @@
         <nav class="navigation">
             <ul>
                 <li><a href="/jonbbagby/index.html">Home</a> </li>
-                <li><a href="/jonbbagby/about-me.html">About Me</a></li>
+                <li><a href="/jonbbagby/about-me.html">Education</a></li>
                 <li><a href="/jonbbagby/skills.html">Skills</a></li>
                 <li><a href="/jonbbagby/projects.html">Projects</a></li>
             </ul>
         </nav>
     </div>
 </header>
-<h1>My Projects</h1>
+<h1 style="text-align: center">My Projects</h1>
 <table>
 
     <tr>
@@ -51,7 +51,8 @@
                 feature which shows a list of recipes the user can cook based on their pantry items and the recipes in the
                 database. Users would be able to choose from their own recipes to match, or other user's recipes.
             </p>
-                <a href="/jonbbagby/whatsSup.html"><p>Click here to see screenshots</p></a>
+                <a href="/jonbbagby/whatsSup.html"><p>Screenshots</p></a>
+                <a href="https://github.com/LaunchCodeLiftoffProjects/jane-group-a/tree/bagby-april2022"><p>Git Repo</p></a>
         </td>
         <td class="viz-table">
             <p>The Dungeon is the first project I started out of LaunchCode. It has always been a work in progress and
@@ -60,7 +61,8 @@
                 It stores information entered by users in a MySQL database. The end goal of the Character Builder is to
                 be able to create a printable D&D character sheet and store that character in a database.
             </p>
-            <a href="/jonbbagby/theDungeon.html"><p>Click here to see screenshots</p></a>
+            <a href="/jonbbagby/theDungeon.html"><p>Screenshots</p></a>
+            <a href="https://github.com/bobagby78/dnd-project"><p>Git Repo</p></a>
         </td>
     </tr>
 
@@ -83,7 +85,7 @@
                 process of developing the app, and it has been a valuable resource in learning about XML and working with
                 the Android Studio design interface.
             </p>
-            <a href="/jonbbagby/criticalRoll.html"><p>click here to see screenshots</p></a>
+            <a href="/jonbbagby/criticalRoll.html"><p>screenshots</p></a>
         </td>
 
         <td class="viz-table">
