--- a/theDungeon.html
+++ b/theDungeon.html
@@ -18,7 +18,7 @@
         </tr>
         <tr>
             <td>
-                <img class="screen-shot" src="/jonbbagby/images/character-create-form.jpg" alt="">
+                <img class="screen-shot" src="/jonbbagby/images/character-create-form.jpg" alt="Character Create Form">
             </td>
 <!--            <td>-->
 <!--                <img class="screen-shot" src="/jonbbagby/images/critRoll2.jpg" alt="">-->
@@ -27,6 +27,29 @@
 <!--                <img class="screen-shot" src="/jonbbagby/images/critRoll3.jpg" alt="">-->
 <!--            </td>-->
 
+        </tr>
+
+        <tr>
+            <th><h2>Character Create With Data</h2></th>
+
+        </tr>
+
+
+        <tr>
+            <td>
+                <img class="screen-shot" src="/jonbbagby/images/character-create-filled.jpg" alt="Character Create in Process">
+            </td>
+        </tr>
+
+        <tr>
+            <th><h2>MySQL Table</h2></th>
+
+        </tr>
+
+        <tr>
+            <td>
+                <img class="screen-shot" src="/jonbbagby/images/MySQL-data.jpg" alt="Character Create in Process">
+            </td>
         </tr>
 
     </table>
