--- a/about-me.html
+++ b/about-me.html
@@ -19,7 +19,7 @@
             <nav class="navigation">
                         <ul>
                             <li><a href="/jonbbagby/index.html">Home</a> </li>
-                            <li><a href="/jonbbagby/about-me.html">About Me</a></li>
+                            <li><a href="/jonbbagby/about-me.html">Education</a></li>
                             <li><a href="/jonbbagby/skills.html">Skills</a></li>
                             <li><a href="/jonbbagby/projects.html">Projects</a></li>
                 </ul>
