--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <nav class="navigation">
                         <ul>
                             <li><a href="/jonbbagby/index.html">Home</a> </li>
-                            <li><a href="/jonbbagby/about-me.html">Education</a></li>
+                            <li><a href="/jonbbagby/education.html">Education</a></li>
                             <li><a href="/jonbbagby/skills.html">Skills</a></li>
                             <li><a href="/jonbbagby/projects.html">Projects</a></li>
                         </ul>
