--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
         <nav class="navigation">
             <ul>
                 <li><a href="/jonbbagby/index.html">Home</a> </li>
-                <li><a href="/jonbbagby/about-me.html">Education</a></li>
+                <li><a href="/jonbbagby/education.html">Education</a></li>
                 <li><a href="/jonbbagby/skills.html">Skills</a></li>
                 <li><a href="/jonbbagby/projects.html">Projects</a></li>
             </ul>
@@ -52,7 +52,7 @@
                 database. Users would be able to choose from their own recipes to match, or other user's recipes.
             </p>
                 <a href="/jonbbagby/whatsSup.html"><p>Screenshots</p></a>
-                <a href="https://github.com/LaunchCodeLiftoffProjects/jane-group-a/tree/bagby-april2022"><p>Git Repo</p></a>
+                <a href="https://github.com/bobagby78/jane-group-a" target="_blank"><p>Git Repo</p></a>
         </td>
         <td class="viz-table">
             <p>The Dungeon is the first project I started out of LaunchCode. It has always been a work in progress and
@@ -62,7 +62,7 @@
                 be able to create a printable D&D character sheet and store that character in a database.
             </p>
             <a href="/jonbbagby/theDungeon.html"><p>Screenshots</p></a>
-            <a href="https://github.com/bobagby78/dnd-project"><p>Git Repo</p></a>
+            <a href="https://github.com/bobagby78/dnd-project" target="_blank"><p>Git Repo</p></a>
         </td>
     </tr>
 
