--- a/theDungeon.html
+++ b/theDungeon.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Dungeon</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body id="grad">
