finalizes a color scheme. adds padding to viz-table for readability

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="resume, web developer, developer, full stack, full, stack">
     <meta name="author" content="Jon Bagby">
     <title>Jon B Bagby | Web Developer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 </head>
 
 <body id="grad">
@@ -24,7 +24,7 @@
                 <div>
                     <nav class="navigation">
                         <ul>
-                            <li><a href="/jonbbagby/index.html">Home</a> </li>
+                            <li><a class="current" href="/jonbbagby/index.html">Home</a> </li>
                             <li><a href="/jonbbagby/education.html">Education</a></li>
                             <li><a href="/jonbbagby/skills.html">Skills</a></li>
                             <li><a href="/jonbbagby/projects.html">Projects</a></li>
