--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 
-    <link rel="stylesheet" href="styles.css">
     <title>JBB Projects</title>
 </head>
 
@@ -25,7 +24,7 @@
                 <li><a href="/jonbbagby/index.html">Home</a> </li>
                 <li><a href="/jonbbagby/education.html">Education</a></li>
                 <li><a href="/jonbbagby/skills.html">Skills</a></li>
-                <li><a href="/jonbbagby/projects.html">Projects</a></li>
+                <li><a class="current" href="/jonbbagby/projects.html">Projects</a></li>
             </ul>
         </nav>
     </div>
@@ -34,10 +33,10 @@
 <table>
 
     <tr>
-        <th class="viz-table">
+        <th class="viz-table viz-table-header">
             <h3>What's Sup?</h3>
         </th>
-        <th class="viz-table">
+        <th class="viz-table viz-table-header">
             <h3>The Dungeon</h3>
         </th>
     </tr>
@@ -70,10 +69,10 @@
 <table class=" project-table">
 
     <tr>
-        <th class="viz-table">
+        <th class="viz-table viz-table-header">
             <h3>Critical Roll Tabletop Dice Roller</h3>
         </th>
-        <th class="viz-table">
+        <th class="viz-table viz-table-header">
             <h3>My Garage</h3>
         </th>
     </tr>
@@ -85,7 +84,7 @@
                 process of developing the app, and it has been a valuable resource in learning about XML and working with
                 the Android Studio design interface.
             </p>
-            <a href="/jonbbagby/criticalRoll.html"><p>screenshots</p></a>
+            <a href="/jonbbagby/criticalRoll.html"><p>Screenshots</p></a>
         </td>
 
         <td class="viz-table">
