--- a/skills.html
+++ b/skills.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles2.css">
 
     <title>JBB Skills</title>
 </head>
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="/jonbbagby/index.html">Home</a> </li>
                 <li><a href="/jonbbagby/education.html">Education</a></li>
-                <li><a href="/jonbbagby/skills.html">Skills</a></li>
+                <li ><a class="current" href="/jonbbagby/skills.html">Skills</a></li>
                 <li><a href="/jonbbagby/projects.html">Projects</a></li>
             </ul>
         </nav>
