--- a/theDungeon.html
+++ b/theDungeon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>The Dungeon</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles3.css">
 </head>
 <body id="grad">
 <a href="/jonbbagby/projects.html">
