--- a/whatsSup.html
+++ b/whatsSup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>What's Sup Samples</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles3.css">
 </head>
 <body id="grad">
 
