playing with SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="resume, web developer, developer, full stack, full, stack">
+    <meta name="keywords" content="resume, web developer, developer, full stack, full, stack, jon, bagby">
     <meta name="author" content="Jon Bagby">
     <title>Jon B Bagby | Web Developer</title>
     <link rel="stylesheet" href="styles2.css">
