--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div> 
         </div>
         <div class="grid-item grid-item-3 centered" id="main-info">
-            <div id="main-info">
+            <div>
                 <table>
                     <tr><td>Phone: </td> <td>Removed for my sanity </td></tr>
                     <tr><td>Email: </td> <td><a href="mailto:bobagby78@gmail.com" target="new">bobagby78@gmail.com</a> </td></tr>
